--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/style.css">
-    <title> HHH</title>
+    <link rel = "icon" href ="css/logo-title.png"   type = "image/x-icon"> 
+    <title> |HHH|</title>
   </head>
   <body>
       <!----->
