--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
           <div class="menu">
               <ul>
                   <li class="active">Home</li>
-                  <li>Services</li>
-                  <li>Product</li> 
-                  <li>Contact</li>
+                  <li class="allheads">Services</li>
+                  <li class="allheads">Product</li> 
+                  <li class="allheads">Contact</li>
                   <li><a href="#" class="signup-btn"><span class="signup-text"> Sign Up</span></a></li>
               </ul>
           </div>
