--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="css/style.css">
     <link rel = "icon" href ="css/logo-title.png"   type = "image/x-icon"> 
+    <script src="https://kit.fontawesome.com/3b0d4c1249.js" crossorigin="anonymous"></script>
     <title> |HHH|</title>
   </head>
   <body>
@@ -28,5 +29,24 @@
       <div class ="app-picture">
           <img src="images/transparentlogo.png" />
       </div>
+      <footer>
+        <div class="foot">
+        <a class="btn" href="#">
+           <i class="fab fa-facebook-f"></i>
+        </a>
+        <a class="btn" href="#">
+           <i class="fab fa-twitter"></i>
+        </a>
+        <a class="btn" href="#">
+           <i class="fab fa-google"></i>
+        </a>
+        <a class="btn" href="#">
+           <i class="fab fa-instagram"></i>
+        </a>
+        <a class="btn" href="#">
+           <i class="fab fa-youtube"></i>
+        </a>
+       </div>
+    </footer>
   </body>
 </html>
