--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <link rel="stylesheet" href="css/style.css">
     <link rel = "icon" href ="css/logo-title.png"   type = "image/x-icon"> 
-    <script src="https://kit.fontawesome.com/3b0d4c1249.js" crossorigin="anonymous"></script>
     <title> |HHH|</title>
   </head>
   <body>
@@ -32,19 +31,19 @@
       <footer>
         <div class="foot">
         <a class="btn" href="#">
-           <i class="fab fa-facebook-f"></i>
+            <img src="images/facebook-logo.png" alt="facebook-logo" width="20px" height="20px" top="10px">
         </a>
         <a class="btn" href="#">
-           <i class="fab fa-twitter"></i>
+            <img src="images/twitter.png" alt="twitter-logo" width="20px" height="20px">
         </a>
         <a class="btn" href="#">
-           <i class="fab fa-google"></i>
+            <img src="images/search.png" alt="google-logo" width="20px" height="20px" >
         </a>
         <a class="btn" href="#">
-           <i class="fab fa-instagram"></i>
+            <img src="images/instagram-logo.png" alt="insta-logo" width="20px" height="20px">
         </a>
         <a class="btn" href="#">
-           <i class="fab fa-youtube"></i>
+            <img src="images/youtube.png" alt="youtube-logo" width="20px" height="20px">
         </a>
        </div>
     </footer>
