--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
           <div class="menu">
               <ul>
                   <li class="active">Home</li>
-                  <li class="allheads">Services</li>
-                  <li class="allheads">Product</li> 
-                  <li class="allheads">Contact</li>
+                  <li class="allheads">New Music</li>
+                  <li class="allheads">Tour</li> 
+                  <li class="allheads">Merch</li>
+                  <li class="allheads">Team</li>
                   <li><a href="#" class="signup-btn"><span class="signup-text"> Sign Up</span></a></li>
               </ul>
           </div>
