--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="css/style.css">
     <link rel = "icon" href ="css/logo-title.png"   type = "image/x-icon"> 
-    <title> |HHH|</title>
+    <title> HHH</title>
   </head>
   <body>
       <!----->
@@ -32,19 +32,24 @@
       <footer>
         <div class="foot">
         <a class="btn" href="#">
-            <img src="images/facebook-logo.png" alt="facebook-logo" width="20px" height="20px" top="10px">
+            <img src="images/facebook-logo-yellow.png" alt="facebook-logo" class="foot-head" width="20px" height="20px" >
+            <img src="images/facebook-logo.png" alt="facebook-logo" class="foot-cap" width="20px" height="20px" top="10px">
         </a>
         <a class="btn" href="#">
-            <img src="images/twitter.png" alt="twitter-logo" width="20px" height="20px">
+            <img src="images/twitter-yellow.png" alt="twitter-logo"class="foot-head" width="20px" height="20px">
+            <img src="images/twitter.png" alt="twitter-logo" class="foot-cap" width="20px" height="20px">
         </a>
         <a class="btn" href="#">
-            <img src="images/search.png" alt="google-logo" width="20px" height="20px" >
+            <img src="images/search_yellow.png" alt="google-logo"class="foot-head" width="20px" height="20px" >
+            <img src="images/search.png" alt="google-logo" class="foot-cap"width="20px" height="20px" >
         </a>
         <a class="btn" href="#">
-            <img src="images/instagram-logo.png" alt="insta-logo" width="20px" height="20px">
+            <img src="images/instagram-logo-yellow.png" alt="insta-logo" class="foot-head"width="20px" height="20px">
+            <img src="images/instagram-logo.png" alt="google-logo"class="foot-cap" width="20px" height="20px" >
         </a>
         <a class="btn" href="#">
-            <img src="images/youtube.png" alt="youtube-logo" width="20px" height="20px">
+            <img src="images/youtube-yellow.png" alt="youtube-logo" class="foot-head" width="20px" height="20px">
+            <img src="images/youtube.png" alt="youtube-logo" class="foot-cap" width="20px" height="20px">
         </a>
        </div>
     </footer>
