--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
       </div>
       <div class="container">
           <div class="menu">
-              <ul>
+                <ul>
                   <li class="active">Home</li>
                   <li class="allheads">New Music</li>
                   <li class="allheads">Tour</li> 
                   <li class="allheads">Merch</li>
                   <li class="allheads">Team</li>
-                  <li><a href="#" class="signup-btn"><span class="signup-text"> Sign Up</span></a></li>
-              </ul>
+                </ul>
+                <a href="#" class="signup-btn"><span class="signup-text"> Sign Up</span></a>
+              
           </div>
       </div>
       <div class="app-text">
