Linked pages, and heads beautified

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <div class="container">
           <div class="menu">
                 <ul>
-                  <li class="active">Home</li>
-                  <li class="allheads">New Music</li>
-                  <li class="allheads">Tour</li> 
-                  <li class="allheads">Merch</li>
-                  <li class="allheads">Team</li>
+                    <li class="active">Home</li>
+                    <li class="allheads">New Music</li>
+                    <li class="allheads">Tour</li> 
+                    <li class="allheads">Merch</li>
+                    <li class="allheads">Team</li>
                 </ul>
-                <a href="#" class="signup-btn"><span class="signup-text"> Sign Up</span></a>
+                <a href="../new/loginpage/index.html" class="signup-btn"><span class="signup-text">Log In</span></a>
               
           </div>
       </div>
