--- a/loginpage/index.html
+++ b/loginpage/index.html
@@ -13,7 +13,7 @@
         <div class="headercontainer">
             <div class="menu">
                 <ul>
-                    <li class="active">Home</li>
+                    <a href="../index.html" class="no_und"><li class="active">Home</li></a>
                     <li class="allheads">New Music</li>
                     <li class="allheads">Tour</li>
                     <li class="allheads">MERCH</li>
