--- a/loginpage/index.html
+++ b/loginpage/index.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
         <title>LOGIN</title>
-        <link rel = "icon" href ="css/logo-title.png"   type = "image/x-icon">
+        <link rel = "icon" href ="css/logo-title.png" type = "image/x-icon">
 
     </head>
     <body>
@@ -39,7 +39,7 @@
                 <input class="loginbtn" type="submit" name="" value="Login">
 
             </form>
-            <a class="b1" href="fp">New Member?</a>
+            <a class="b1" href="../signup/index.html">New Member?</a>
         </div>
         
     </body>
