Team page minor change, pages linked

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li class="allheads">New Music</li>
                     <li class="allheads">Tour</li> 
                     <li class="allheads">Merch</li>
-                    <li class="allheads">Team</li>
+                    <a href="../new/team_page/team-section.html" class="no_und"><li class="allheads">Team</li></a>
                 </ul>
                 <a href="../new/loginpage/index.html" class="signup-btn"><span class="signup-text">Log In</span></a>
               
