--- a/loginpage/index.html
+++ b/loginpage/index.html
@@ -40,7 +40,7 @@
 
             </form>
             <a class="b1" href="../signup/index.html">New Member?</a>
+            <a class="lb"><hr></a>
         </div>
-        
     </body>
 </html>
