--- a/loginpage/index.html
+++ b/loginpage/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="css/style.css">
         <title>LOGIN</title>
         <link rel = "icon" href ="css/logo-title.png" type = "image/x-icon">
-
+        <script rel="script" href="script/validation.js"></script>
     </head>
     <body>
         <div class="bgcontainer">
