--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       </div>
       <div class="app-text">
           <h1>HHH</h1>
-          <p>Project Work is a learning experience which aims to provide students with the<br> opportunity to synthesise knowledge from various areas of learning, and critically<br> and creatively apply it to real life situations. This process, which enhances students’<br> knowledge and enables them to acquire skills like collaboration, communication and<br> independent learning, prepares them for lifelong learning and the challenges ahead</p>
+				<p>This is the homepage of the reknowned music producer, dj, songwriter, and artist, HHH !<br/><br/>This page serves as a medium of sharing ❤ and the sounds of HHH<br/><br/>If you really love the sounds of HHH, consider attending the upcoming shows of HHH, listed in the 'Tour' page (at the top 😊)<br/><br/>Want to listen to HHH's new 🎶🎵? Headover to 'New Music' ⬆⬆<br/><br/>Would like to Get updates of HHH? Please sign up!!<br/>
+				<br/>For the hardcore fans, headover to 'Merch' to buy the curated merch🧥 of HHH</p>
+				<span>Follow HHH in socials 🤘(click on the icons in the bottom right)</span>
       </div>
       <div class ="app-picture">
           <img src="images/transparentlogo.png" />
