--- a/team_page/index.html
+++ b/team_page/index.html
@@ -1,12 +1,19 @@
+<!DOCTYPE html>
+<html>
+<head >
+  
+</head>
+<body>
+
 <!-- Our team Section -->
 <link rel="stylesheet" href="style.css">
 <section id="team" class="team content-section">
   <div class="container">
     <div class="row text-center">
       <div class="col-md-12">
-        <h2>Our Team</h2>
+        <!--<h2>Our Team</h2>
         <h3 class="caption gray">People who made this stuffs</h3>
-      </div><!-- /.col-md-12 -->
+      </div>--><!-- /.col-md-12 -->
 
       <div class="container">
         <div class="row">
@@ -32,7 +39,7 @@
           <div class="col-md-4">
             <div class="team-member">
               <figure>
-                <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/jessie-barnett.jpg" alt="" class="img-responsive">
+                <img src="h3.jpg" alt="" class="img-responsive">
                 <figcaption>
                   <p> Team member</p>
                   <ul>
@@ -72,3 +79,5 @@
     </div><!-- /.row -->
   </div><!-- /.container -->
 </section><!-- /.our-team -->
+</body>
+</html>
