--- a/loginpage/index.html
+++ b/loginpage/index.html
@@ -17,7 +17,7 @@
                     <li class="allheads">New Music</li>
                     <li class="allheads">Tour</li>
                     <li class="allheads">MERCH</li>
-                    <li class="allheads">Team</li>
+                    <a href="../team_page/index.html" class="no_und"><li class="allheads">Team</li></a>
                 </ul>
             </div>
         </div>
