--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/style.css">
-    <link rel = "icon" href ="css/logo-title.png"   type = "image/x-icon"> 
+    <link rel = "icon" href ="css/logo-title.png" type = "image/x-icon"> 
     <title> HHH</title>
   </head>
   <body>
@@ -17,7 +17,7 @@
                     <li class="allheads">New Music</li>
                     <li class="allheads">Tour</li> 
                     <li class="allheads">Merch</li>
-                    <a href="../new/team_page/team-section.html" class="no_und"><li class="allheads">Team</li></a>
+                    <a href="../new/team_page/index.html" class="no_und"><li class="allheads">Team</li></a>
                 </ul>
                 <a href="../new/loginpage/index.html" class="signup-btn"><span class="signup-text">Log In</span></a>
               
