team_page_improved

--- a/team_page/index.html
+++ b/team_page/index.html
@@ -23,7 +23,7 @@
               <figure>
                 <img src="harsha.png" alt="" class="img-responsive">
                 <figcaption>
-                  <p>Team member </p>
+                  <p>Harshavardhana K</p>
                   <ul>
                     <li><a href=""><i class="fa fa-facebook fa-2x"></i></a></li>
                     <li><a href=""><i class="fa fa-twitter fa-2x"></i></a></li>
