--- a/team_page/index.html
+++ b/team_page/index.html
@@ -4,7 +4,19 @@
   <link rel = "icon" href = "logo-title.png" type = "image/x-icon">
 </head>
 <body>
-
+<div class="headercontainer">
+          <div class="menu_header_container">
+                <ul>
+                    <li class="active">Home</li>
+                    <li class="allheads">New Music</li>
+                    <li class="allheads">Tour</li> 
+                    <li class="allheads">Merch</li>
+                    <a href="../new/team_page/index.html" class="no_und"><li class="allheads">Team</li></a>
+                </ul>
+                <a href="../new/loginpage/index.html" class="signup-btn"><span class="signup-text">Log In</span></a>
+              
+          </div>
+      </div>
 <!-- Our team Section -->
 <link rel="stylesheet" href="style.css">
 <section id="team" class="team content-section">
