--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
           <div class="menu">
                 <ul>
                     <li class="active">Home</li>
-                    <li class="allheads">New Music</li>
-                    <li class="allheads">Tour</li> 
-                    <li class="allheads">Merch</li>
-                    <a href="../new/team_page/index.html" class="no_und"><li class="allheads">Team</li></a>
+                    <a href="lion.html" class="no_und"><li class="allheads">New Music</li></a>
+                    <a href="lion.html" class="no_und"><li class="allheads">Tour</li></a>
+                    <a href="lion.html" class="no_und"><li class="allheads">Merch</li></a>
+                    <a href="team_page/index.html" class="no_und"><li class="allheads">Team</li></a>
 
                 </ul>
                 <a href="../new/loginpage/index.html" class="signup-btn"><span class="signup-text">Log In</span></a>
