--- a/team_page/index.html
+++ b/team_page/index.html
@@ -7,13 +7,13 @@
 <div class="headercontainer">
           <div class="menu_header_container">
                 <ul>
-                    <li class="active">Home</li>
-                    <li class="allheads">New Music</li>
-                    <li class="allheads">Tour</li> 
-                    <li class="allheads">Merch</li>
+                    <a href="../index.html" class="no_und"><li class="allheads">Home</li></a>
+                    <a href="../lion.html" class="no_und"><li class="allheads">New Music</li></a>
+                    <a href="../lion.html" class="no_und"><li class="allheads">Tour</li></a>
+                    <a href="../lion.html" class="no_und"><li class="allheads">Merch</li></a>
                     <a href="../new/team_page/index.html" class="no_und"><li class="allheads">Team</li></a>
                 </ul>
-                <a href="../new/loginpage/index.html" class="signup-btn"><span class="signup-text">Log In</span></a>
+                <a href="../loginpage/index.html" class="signup-btn"><span class="signup-text">Log In</span></a>
               
           </div>
       </div>
