--- a/lion.html
+++ b/lion.html
@@ -5,6 +5,7 @@
   <title>Chill the lion</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="lion/style.css">
+	<link rel = "icon" href ="logo-title.png" type = "image/x-icon">
 </head>
 <body>
 <!-- partial:index.partial.html -->
