--- a/signup/index.html
+++ b/signup/index.html
@@ -15,9 +15,9 @@
         <div class="menu">
             <ul>
                 <a href="../index.html" class="no_und"><li class="active">Home</li></a>
-                <li class="allheads">New Music</li>
-                <li class="allheads">Tour</li>
-                <li class="allheads">MERCH</li>
+                <a href="../lion.html" class="no_und"><li class="allheads">New Music</li></a>
+                <a href="../lion.html" class="no_und"><li class="allheads">Tour</li></a>
+                <a href="../lion.html" class="no_und"><li class="allheads">Merch</li></a>
                 <a href="../team_page/index.html" class="no_und"><li class="allheads">Team</li></a>
             </ul>
         </div>
