--- a/team_page/index.html
+++ b/team_page/index.html
@@ -11,7 +11,7 @@
                     <a href="../lion.html" class="no_und"><li class="allheads">New Music</li></a>
                     <a href="../lion.html" class="no_und"><li class="allheads">Tour</li></a>
                     <a href="../lion.html" class="no_und"><li class="allheads">Merch</li></a>
-                    <a href="../new/team_page/index.html" class="no_und"><li class="allheads">Team</li></a>
+                    <a href="#" class="no_und"><li class="allheads">Team</li></a>
                 </ul>
                 <a href="../loginpage/index.html" class="signup-btn"><span class="signup-text">Log In</span></a>
               
@@ -43,7 +43,7 @@
                   </ul>
                 </figcaption>
               </figure>
-              <h4>Harsha </h4>
+              <h4>Harsha</h4>
               <p>BMS</p>
             </div><!-- /.team-member-->
           </div><!-- /.col-md-4 -->
@@ -53,7 +53,7 @@
               <figure>
                 <img src="h3.jpg" alt="" class="img-responsive">
                 <figcaption>
-                  <p> Team member</p>
+                  <p>Harshit Hiremath</p>
                   <ul>
                     <li><a href=""><i class="fa fa-facebook fa-2x"></i></a></li>
                     <li><a href=""><i class="fa fa-twitter fa-2x"></i></a></li>
@@ -71,7 +71,7 @@
               <figure>
                 <img src="p3.png" alt="" class="img-responsive">
                 <figcaption>
-                  <p>Team member</p>
+                  <p>Harsh Shankar Rao</p>
                   <ul>
                     <li><a href=""><i class="fa fa-facebook fa-2x"></i></a></li>
                     <li><a href=""><i class="fa fa-twitter fa-2x"></i></a></li>
