Particlejs added, phone number validation added

--- a/signup/index.html
+++ b/signup/index.html
@@ -8,9 +8,7 @@
     </script>
 </head>
 <body>
-    <div class="bgcontainer">
-        <div class="bg"></div>
-    </div>
+    <div class="whole">
     <div class="headercontainer">
         <div class="menu">
             <ul>
@@ -48,5 +46,10 @@
         </form>
         <a class="b1" href="../loginpage/index.html">Already a FAN?</a>
     </div>
+    </div>
+<div id="particles-js">
+<script src="scripts/particles.js"></script>
+<script src="scripts/app.js"></script>
+</div>
 </body>
 </html>
