--- a/loginpage/index.html
+++ b/loginpage/index.html
@@ -8,9 +8,7 @@
     </script>
     </head>
     <body>
-        <div class="bgcontainer">
-            <div class="bg"></div>
-        </div>
+        <div class="whole">
         <div class="headercontainer">
             <div class="menu">
                 <ul>
@@ -34,7 +32,7 @@
                 </div>
                 <div>
                     <span>
-                        <a class="forgot" href="reg">FORGOT PASSWORD?</a>
+                        <a class="forgot" href="../signup/index.html">FORGOT PASSWORD?</a>
                     </span>
                 </div>
                 <input class="loginbtn" type="submit" name="" value="Login">
@@ -42,5 +40,9 @@
             </form>
             <a class="b1" href="../signup/index.html">New Member?</a>
         </div>
+        </div>
+        <div id="particles-js"></div>
+        <script src="scripts/particles.js"></script>
+        <script src="scripts/app.js"></script>
     </body>
 </html>
